--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 		</div>
 		<div class="row">
 			<button class="btn btn_dark btn_small mrgn" disabled>Small</button>
-			<a href="#" class="btn btn_dark btn_normal mrgn" disabled>Normal</a>
+			<a href="#" class="btn btn_dark btn_normal mrgn disable">Normal</a>
 			<button class="btn btn_dark btn_medium mrgn" disabled>Medium</button>
-			<a href="#" class="btn btn_dark btn_large mrgn" disabled>Large</a>
+			<a href="#" class="btn btn_dark btn_large mrgn disable">Large</a>
 		</div>
 	</section>
 	<section class="dark">
@@ -44,9 +44,9 @@
 		</div>
 		<div class="row">
 			<button class="btn btn_light btn_small mrgn" disabled>Small</button>
-			<a href="#" class="btn btn_light btn_normal mrgn" disabled>Normal</a>
+			<a href="#" class="btn btn_light btn_normal mrgn disable">Normal</a>
 			<button class="btn btn_light btn_medium mrgn" disabled>Medium</button>
-			<a href="#" class="btn btn_light btn_large mrgn" disabled>Large</a>
+			<a href="#" class="btn btn_light btn_large mrgn disable">Large</a>
 		</div>
 	</section>
 	<a href="https://proweb4all.ru/" class="development" target="_blank">developed by Proweb4all.ru</a>
