--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <link rel="shortcut icon" href="favicon.png">
 	<link rel="icon" href="img/favicon/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon-180x180.png">
-	<link href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=cyrillic" rel="stylesheet">	<link rel="stylesheet" href="css/main.min.css">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans&amp;subset=cyrillic" rel="stylesheet">	<link rel="stylesheet" href="css/main.min.css?v=1.1">
 </head>
 
 <body>
@@ -30,9 +30,9 @@
 		</div>
 		<div class="row">
 			<button class="btn btn_dark btn_small mrgn" disabled>Small</button>
-			<a href="#" class="btn btn_dark btn_normal mrgn disable">Normal</a>
+			<a href="#" class="btn btn_dark-disabled btn_normal mrgn">Normal</a>
 			<button class="btn btn_dark btn_medium mrgn" disabled>Medium</button>
-			<a href="#" class="btn btn_dark btn_large mrgn disable">Large</a>
+			<a href="#" class="btn btn_dark-disabled btn_large mrgn">Large</a>
 		</div>
 	</section>
 	<section class="dark">
@@ -44,9 +44,9 @@
 		</div>
 		<div class="row">
 			<button class="btn btn_light btn_small mrgn" disabled>Small</button>
-			<a href="#" class="btn btn_light btn_normal mrgn disable">Normal</a>
+			<a href="#" class="btn btn_light-disabled btn_normal mrgn">Normal</a>
 			<button class="btn btn_light btn_medium mrgn" disabled>Medium</button>
-			<a href="#" class="btn btn_light btn_large mrgn disable">Large</a>
+			<a href="#" class="btn btn_light-disabled btn_large mrgn">Large</a>
 		</div>
 	</section>
 	<a href="https://proweb4all.ru/" class="development" target="_blank">developed by Proweb4all.ru</a>
